--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "eslint ./ --fix"
   },
   "dependencies": {
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.1.4",
     "next": "latest",
     "prop-types": "^15.7.2",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-is": "^16.8.0",
+    "react-loading": "^2.0.3",
+    "react-spinners": "^0.10.4",
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
