--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.1.4",
+    "@material-ui/core": "^4.11.3",
     "next": "latest",
     "prop-types": "^15.7.2",
     "react": "^16.8.0",
