--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.1.4",
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "framer-motion": "^3.2.2-rc.1",
     "next": "latest",
     "prop-types": "^15.7.2",
     "react": "^16.8.0",
