--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-is": "^16.8.0",
     "react-loading": "^2.0.3",
     "react-lottie": "^1.2.3",
+    "react-share": "^4.3.1",
     "react-spinners": "^0.10.4",
     "styled-components": "^5.0.0"
   },
